ReactNodeStarter/src/node/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
        - name: node-api
          image: ${SERVICE_API_IMAGE_NAME}
          ports:
            - containerPort: 3100
