ReactNodeStarter/src/node/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3100
  selector:
    app: node-api
